--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://user:password@postgres:5432/ai_analyst
       - REDIS_URL=redis://redis:6379/0
-      - CORS_ORIGINS=http://localhost:3000,http://frontend:3000
+      - CORS_ORIGINS=["http://localhost:3000","http://frontend:3000"]
     volumes:
       - ./backend:/app
       - model_storage:/app/models
