Fix Docker Compose volume spec error and add comprehensive ML/AI features
- Fixed invalid empty volume spec error in docker-compose.yml
- Added Celery background task processing
- Implemented Redis caching service
- Added comprehensive ML pipeline with model training and predictions
- Enhanced frontend components with AI analysis features
- Added monitoring and health check endpoints
- Updated Docker configurations for production deployment
- Added comprehensive documentation and guides

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,146 @@
-FROM node:16-alpine
-
-# Set working directory
+# Multi-stage build for React frontend
+# Stage 1: Dependencies
+FROM node:18-alpine AS deps
 WORKDIR /app
+
+# Install dependencies for native modules
+RUN apk add --no-cache python3 make g++
 
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci --only=production && npm cache clean --force
 
-# Copy project files
+# Stage 2: Build
+FROM node:18-alpine AS builder
+WORKDIR /app
+
+# Install build dependencies
+RUN apk add --no-cache python3 make g++
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies (including dev dependencies)
+RUN npm ci
+
+# Copy source code
 COPY . .
 
-# Build the app
+# Build the application
 RUN npm run build
 
-# Install serve to run the app
-RUN npm install -g serve
+# Stage 3: Production
+FROM nginx:alpine AS production
+
+# Install necessary packages
+RUN apk add --no-cache curl
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
+
+# Copy built application from builder stage
+COPY --from=builder --chown=nextjs:nodejs /app/build /usr/share/nginx/html
+
+# Copy custom nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Create necessary directories and set permissions
+RUN mkdir -p /var/cache/nginx /var/log/nginx /var/run && \
+    chown -R nextjs:nodejs /var/cache/nginx /var/log/nginx /var/run /usr/share/nginx/html
+
+# Switch to non-root user
+USER nextjs
 
 # Expose port
 EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
+    CMD curl -f http://localhost:3000 || exit 1
 
-# Run the application
-CMD ["npm", "start"] 
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
+
+# Stage 4: Development
+FROM node:18-alpine AS development
+WORKDIR /app
+
+# Install dependencies for native modules
+RUN apk add --no-cache python3 make g++
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies
+RUN npm ci
+
+# Copy source code
+COPY --chown=nextjs:nodejs . .
+
+# Switch to non-root user
+USER nextjs
+
+# Expose port
+EXPOSE 3000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:3000 || exit 1
+
+# Start development server
+CMD ["npm", "start"]
+
+# Stage 5: Testing
+FROM node:18-alpine AS testing
+WORKDIR /app
+
+# Install dependencies for native modules
+RUN apk add --no-cache python3 make g++
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies
+RUN npm ci
+
+# Copy source code
+COPY --chown=nextjs:nodejs . .
+
+# Switch to non-root user
+USER nextjs
+
+# Run tests
+CMD ["npm", "test"]
+
+# Stage 6: Build-only (for CI/CD)
+FROM node:18-alpine AS build-only
+WORKDIR /app
+
+# Install build dependencies
+RUN apk add --no-cache python3 make g++
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies
+RUN npm ci
+
+# Copy source code
+COPY . .
+
+# Build the application
+RUN npm run build
+
+# Output build artifacts
+CMD ["echo", "Build completed successfully"] 
