--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,5 +28,4 @@ seaborn==0.13.0
 matplotlib==3.8.2
 openpyxl==3.1.2
 supabase==2.16.0
-python-jose[cryptography]==3.3.0
-google-generativeai==0.8.3 
+google-genai
