Fix import paths and PYTHONPATH for Render deployment - Updated Dockerfile PYTHONPATH from /app to empty string - Removed app. prefix from all import statements - Fixed ModuleNotFoundError for app.models and other modules - Ensures compatibility with Render's Docker build environment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,7 +35,7 @@ FROM python:3.9-slim as production
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PATH="/opt/venv/bin:$PATH"
-ENV PYTHONPATH="/app"
+ENV PYTHONPATH=""
 ENV MPLCONFIGDIR=/tmp/matplotlib
 
 # Create non-root user for security
