--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -98,7 +98,7 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Default command for production
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
 
 # Development stage (inherits from production)
 FROM production as development
@@ -118,7 +118,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 USER appuser
 
 # Development command with reload
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
 # Celery worker stage
 FROM production as celery
