--- a/backend/celery.conf
+++ b/backend/celery.conf
@@ -1,5 +1,5 @@
 [program:celery]
-command=celery -A celery worker --loglevel=info --concurrency=2
+command=celery -A app.celery worker --loglevel=info --concurrency=2
 directory=/app
 user=appuser
 numprocs=1
@@ -13,7 +13,7 @@ killasgroup=true
 priority=998
 
 [program:celery-beat]
-command=celery -A celery beat --loglevel=info
+command=celery -A app.celery beat --loglevel=info
 directory=/app
 user=appuser
 numprocs=1
