Fix circular import: rename celery.py to celery_app.py to avoid conflict with Celery library

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -144,10 +144,10 @@ RUN mkdir -p /app/logs/celery && chown -R appuser:appuser /app/logs
 
 # Health check for Celery
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD celery -A app.celery inspect ping || exit 1
+    CMD celery -A app.celery_app inspect ping || exit 1
 
 # Celery worker command
-CMD ["celery", "-A", "app.celery", "worker", "--loglevel=info", "--concurrency=2"]
+CMD ["celery", "-A", "app.celery_app", "worker", "--loglevel=info", "--concurrency=2"]
 
 # Celery beat stage
 FROM production as celery-beat
@@ -157,7 +157,7 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD ps aux | grep "celery.*beat" | grep -v grep || exit 1
 
 # Celery beat command
-CMD ["celery", "-A", "app.celery", "beat", "--loglevel=info"]
+CMD ["celery", "-A", "app.celery_app", "beat", "--loglevel=info"]
 
 # Flower monitoring stage
 FROM production as flower
@@ -179,4 +179,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:5555/ || exit 1
 
 # Flower command
-CMD ["celery", "-A", "app.celery", "flower", "--port=5555"] 
+CMD ["celery", "-A", "app.celery_app", "flower", "--port=5555"] 
