--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.1
+fastapi==0.109.2
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pandas==2.1.3
@@ -18,7 +18,7 @@ boto3==1.34.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 email-validator==2.2.0
-httpx>=0.26,<0.29
+httpx==0.26.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
