--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,54 @@
+# Core FastAPI stack (compatible with Pydantic v1)
 fastapi==0.109.2
-uvicorn[standard]==0.24.0
+pydantic==1.10.13
+pydantic-settings==0.1.1
+uvicorn==0.24.0
+
+# Multipart/form support
 python-multipart==0.0.6
+
+# Auth
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# Env + Config
+python-dotenv==1.0.0
+
+# Database stack
+sqlalchemy==2.0.23
+alembic==1.12.1
+psycopg2-binary==2.9.9
+
+# Background task queue
+celery==5.3.4
+redis==5.0.1
+
+# Machine learning
 pandas==2.1.3
 numpy==1.24.3
 scikit-learn==1.3.2
 xgboost==2.0.1
-shap==0.44.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-alembic==1.12.1
-celery==5.3.4
-redis==5.0.1
+shap==0.45.0  # Updated for XGBoost 2.0 compatibility
+
+# Cloud & HTTP
 boto3==1.34.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.2.0
 httpx==0.28.1
+supabase==2.16.0
+
+# Google Gemini / GenAI support
+google-genai==1.25.0
+
+# Validation & Parsing
+email-validator==2.2.0
+
+# Visualization
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.17.0
+openpyxl==3.1.2
+jinja2==3.1.2
+
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-jinja2==3.1.2
-plotly==5.17.0
-seaborn==0.13.0
-matplotlib==3.8.2
-openpyxl==3.1.2
-supabase==2.16.0
-google-genai==1.25.0
