--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,6 +35,7 @@ WORKDIR /app
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
+RUN pip install --upgrade pip==25.1.1
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
