--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-# Core FastAPI stack (compatible with Pydantic v1)
-fastapi==0.109.2
-pydantic==1.10.13
-pydantic-settings==0.2.5
+# Core FastAPI stack (Pydantic v2 compatible)
+fastapi==0.111.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
 uvicorn==0.24.0
 
 # Multipart/form support
